Crash when tweaking shader values connected to Point Density node #55436

Closed
opened 2018-06-11 12:24:00 +02:00 by Andy Goralczyk · 4 comments
Member

Works: 2.79
Broken: 2.8 a67cc72232

volume_crash_279.blend
(file should work in 2.79 to verify)

Tweaking any value in the Principled Volume shader while viewport rendering is underway should result in a crash.

I've had random crashes when tweaking values in the node editor, but this is the only instance where I had reproducible results.

SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/blenlib/intern/BLI_kdopbvh.c:2004 in BLI_bvhtree_range_query
Full backtrace: P722

Works: 2.79 Broken: 2.8 a67cc72232a [volume_crash_279.blend](https://archive.blender.org/developer/F3661363/volume_crash_279.blend) (file should work in 2.79 to verify) Tweaking any value in the Principled Volume shader while viewport rendering is underway should result in a crash. I've had random crashes when tweaking values in the node editor, but this is the only instance where I had reproducible results. `SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/blenlib/intern/BLI_kdopbvh.c:2004 in BLI_bvhtree_range_query` Full backtrace: [P722](https://archive.blender.org/developer/P722.txt)
Author
Member

Added subscriber: @eyecandy

Added subscriber: @eyecandy
Brecht Van Lommel was assigned by Dalai Felinto 2018-06-11 12:37:29 +02:00

The problem here is that Cycles first synchronizes Blender data, but without loading images and some data like point density and smoke volumes. This was mostly fine before because that data was unlikely to be freed, but with copy-on-write the depsgraph can free the data while Cycles hasn't loaded it yet.

The problem here is that Cycles first synchronizes Blender data, but without loading images and some data like point density and smoke volumes. This was mostly fine before because that data was unlikely to be freed, but with copy-on-write the depsgraph can free the data while Cycles hasn't loaded it yet.

This issue was referenced by 0461f45e5e

This issue was referenced by 0461f45e5e0bcaa8c94265ddbaf442ef7e1b1227

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55436
No description provided.